--- a/R/_auth0.yml
+++ b/R/_auth0.yml
@@ -1,5 +1,5 @@
-name: Google Cloud Run with Shiny and Docker
-remote_url: 'https://demo-trc-store-app-592158830025.us-central1.run.app'
+name: GCR with Shiny and Docker
+remote_url: 'https://trc-store-app.zukti.tech/'
 auth0_config:
   api_url: !expr paste0('https://', Sys.getenv('AUTH0_USER'), '.auth0.com')
   scope: 'openid profile email'
